fix chess + beta fixes

--- a/webroot/index_chess.html
+++ b/webroot/index_chess.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Multiplayer Chess</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/chess.js@1.0.0-beta.6/dist/chess.min.js"></script>
+  <!-- Load React and ReactDOM -->
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+  <!-- Load Chess.js library -->
+  <script src="https://unpkg.com/chess.js@1.0.0-beta.8/dist/chess.min.js"></script>
+  <!-- Load React Chessboard -->
   <script src="https://unpkg.com/react-chessboard@4.4.0/dist/index.js"></script>
 </head>
 <body>
