--- a/webroot/index_reaction.html
+++ b/webroot/index_reaction.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title>Multiplayer Reaction Speed</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,7 +11,7 @@
   
   <div id="players-info" class="status-display">🔄 Connecting...</div>
   
-  <div class="instruction-box" style="background: linear-gradient(135deg, #fff3cd 0%, #ffeaa7 100%); border-left-color: #ffc107;">
+  <div class="instruction-box">
     <h3>⚡ How to Play:</h3>
     <p>Click the highlighted green square as fast as possible for 20 seconds.</p>
     <p>Your final score will be ranked on a live leaderboard with other Reddit users!</p>
