--- a/webroot/index_tictactoe.html
+++ b/webroot/index_tictactoe.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta charset="UTF-8" />
     <title>Multiplayer Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css" />
